test/sensitive-data-searcher/invalid-files/invalid_15.cpp
#include <iostream>

void a () {
    std::cout << 'random string';
}

std::string password;
std::string username = 'password';
password = 'test';

using namespace std;

int e = 10;
float b = 1536.7;

string user = 'root';
